--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
         <div class="container is-max-desktop">
             <div>
                 <video poster="" id="" autoplay controls muted loop width="100%" playbackRate=2.0 style="border-radius: 5px;">
-                    <source src="videos/droid_teaser_animated.m4v" type="video/mp4">
+                    <source src="videos/droid_teaser_animated.mp4" type="video/mp4">
                 </video>
             </div>
         </div>
