--- a/index.html
+++ b/index.html
@@ -58,6 +58,11 @@
                         </div>
 
                         <div class="column has-text-centered">
+                            <img src="figures/droid_logos.jpeg" class="interpolation-image" alt=""
+                            style="display: block; width: 100%; margin-left: auto; margin-right: auto" />
+                        </div>
+
+                        <div class="column has-text-centered">
                             <div class="publication-links">
 
                                 <span class="link-block">
