--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                             <div class="publication-links">
 
                                 <span class="link-block">
-                                    <a target="_blank" href="paper.pdf"
+                                    <a target="_blank" href="https://arxiv.org/abs/2403.12945"
                                         class="external-link button is-normal is-rounded is-dark">
                                         <span class="icon">
                                             <i class="fas fa-file-pdf"></i>
