--- a/visualizer/index.html
+++ b/visualizer/index.html
@@ -1,3 +1,10 @@
+<!--
+  Author: Jimmy Wu (https://jimmyyhwu.github.io)
+  Date: February 2024
+
+  Note: Feel free to borrow the source code of this website, we just kindly ask that you link back to this page: https://droid-dataset.github.io/visualizer
+-->
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -519,6 +526,10 @@
       </div>
     </div>
   </div>
+
+  <footer class="container mt-3 text-center small">
+    <p>Dataset visualizer built by <a href="https://jimmyyhwu.github.io">Jimmy Wu</a>. Feel free to borrow the source code of this website, we just kindly ask that you link back to <a href="https://droid-dataset.github.io/visualizer">this page</a> in your footer.</p>
+  </footer>
 
   <script>
     // Video metadata
